--- a/browserstack.yml
+++ b/browserstack.yml
@@ -1,5 +1,5 @@
-userName: BROWSERSTACK_USERNAME
-accessKey: BROWSERSTACK_ACCESS_KEY
+userName: susheenkanungo_BrVnyq
+accessKey: 3X2x2xBzJvb9tKCTSBop
 platforms:
   - os: Windows
     osVersion: 10
